# simple-finance

./: .gitignore  LICENSE  README.md  example_notebook.ipynb  pyproject.toml
src/simple_finance/: __init__.py
src/simple_finance/pipelines/: alpha_vantage.py  crsp.py  dartmouth.py  yahoo_finance.py
src/simple_finance/tools/: black_scholes.py  portfolio_tools.py  stats_tools.py
