[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-finance"
version = "0.1.0"
description = "A Python toolkit for loading financial data and performing regression and portfolio analysis for teaching and research."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Brian Boyer" }, { name = "Royston Vance" }]
dependencies = [
    "pandas>=2.2,<2.3",
    "requests>=2.32.5",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]

[project.urls]
Homepage = "https://github.com/rvance1/simple-finance"
Issues = "https://github.com/rvance1/simple-finance/issues"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.0",
  "wrds>=0.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]
